--- a/Experiments/WithAndWithoutRag/HarrisonsHematologyAndOncologyExperiment.ipynb
+++ b/Experiments/WithAndWithoutRag/HarrisonsHematologyAndOncologyExperiment.ipynb
@@ -2,23 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in c:\\users\\omer\\.virtualenvs\\hematology-llamaindex-rwmb6g9m\\lib\\site-packages (3.1.2)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\omer\\.virtualenvs\\hematology-llamaindex-rwmb6g9m\\lib\\site-packages (from openpyxl) (1.1.0)\n"
+      "Collecting openpyxl\n",
+      "  Using cached openpyxl-3.1.2-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Using cached openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
+      "Using cached et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: Ignoring invalid distribution -cikit-learn (c:\\users\\omer\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -cikit-learn (c:\\users\\omer\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n",
       "\n",
-      "[notice] A new release of pip is available: 23.3.1 -> 24.0\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+      "[notice] To update, run: C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -28,55 +36,167 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-27T17:49:03.224974700Z",
-     "start_time": "2024-02-27T17:49:00.079193300Z"
+     "end_time": "2024-04-04T15:15:07.364959800Z",
+     "start_time": "2024-04-04T15:15:01.236808800Z"
     }
    },
    "id": "4554e12634b670af"
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\omer\\AppData\\Local\\Temp\\ipykernel_7076\\2035458946.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-27T17:45:47.611787600Z",
-     "start_time": "2024-02-27T17:45:45.113699600Z"
+     "end_time": "2024-04-04T15:15:09.990852Z",
+     "start_time": "2024-04-04T15:15:09.579605300Z"
     }
    },
    "id": "a2ebe17c140df12b"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dotenv\n",
+      "  Using cached dotenv-0.0.5.tar.gz (2.4 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -cikit-learn (c:\\users\\omer\\appdata\\local\\programs\\python\\python39\\lib\\site-packages)\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  python setup.py egg_info did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [64 lines of output]\n",
+      "    error: subprocess-exited-with-error\n",
+      "  \n",
+      "    python setup.py egg_info did not run successfully.\n",
+      "    exit code: 1\n",
+      "  \n",
+      "    [16 lines of output]\n",
+      "    Traceback (most recent call last):\n",
+      "      File \"<string>\", line 2, in <module>\n",
+      "      File \"<pip-setuptools-caller>\", line 14, in <module>\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\setuptools\\__init__.py\", line 2, in <module>\n",
+      "        from setuptools.extension import Extension, Library\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\setuptools\\extension.py\", line 5, in <module>\n",
+      "        from setuptools.dist import _get_unpatched\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\setuptools\\dist.py\", line 7, in <module>\n",
+      "        from setuptools.command.install import install\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\setuptools\\command\\__init__.py\", line 8, in <module>\n",
+      "        from setuptools.command import install_scripts\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\setuptools\\command\\install_scripts.py\", line 3, in <module>\n",
+      "        from pkg_resources import Distribution, PathMetadata, ensure_directory\n",
+      "      File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-wheel-opdsw4qa\\distribute_520d82b966a24d19a1aaa38775f391eb\\pkg_resources.py\", line 1518, in <module>\n",
+      "        register_loader_type(importlib_bootstrap.SourceFileLoader, DefaultProvider)\n",
+      "    AttributeError: module 'importlib._bootstrap' has no attribute 'SourceFileLoader'\n",
+      "    [end of output]\n",
+      "  \n",
+      "    note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  error: metadata-generation-failed\n",
+      "  \n",
+      "  Encountered error while generating package metadata.\n",
+      "  \n",
+      "  See above for output.\n",
+      "  \n",
+      "  note: This is an issue with the package mentioned above, not pip.\n",
+      "  hint: See above for details.\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\installer.py\", line 75, in fetch_build_egg\n",
+      "      subprocess.check_call(cmd)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\subprocess.py\", line 373, in check_call\n",
+      "      raise CalledProcessError(retcode, cmd)\n",
+      "  subprocess.CalledProcessError: Command '['C:\\\\Users\\\\omer\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python39\\\\python.exe', '-m', 'pip', '--disable-pip-version-check', 'wheel', '--no-deps', '-w', 'C:\\\\Users\\\\omer\\\\AppData\\\\Local\\\\Temp\\\\tmp4anec9tg', '--quiet', 'distribute']' returned non-zero exit status 1.\n",
+      "  \n",
+      "  The above exception was the direct cause of the following exception:\n",
+      "  \n",
+      "  Traceback (most recent call last):\n",
+      "    File \"<string>\", line 2, in <module>\n",
+      "    File \"<pip-setuptools-caller>\", line 34, in <module>\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Temp\\pip-install-dq7c3_1c\\dotenv_febed139236245a98bd6ec35b0d29d16\\setup.py\", line 13, in <module>\n",
+      "      setup(name='dotenv',\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\__init__.py\", line 152, in setup\n",
+      "      _install_setup_requires(attrs)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\__init__.py\", line 147, in _install_setup_requires\n",
+      "      dist.fetch_build_eggs(dist.setup_requires)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\dist.py\", line 806, in fetch_build_eggs\n",
+      "      resolved_dists = pkg_resources.working_set.resolve(\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pkg_resources\\__init__.py\", line 766, in resolve\n",
+      "      dist = best[req.key] = env.best_match(\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pkg_resources\\__init__.py\", line 1051, in best_match\n",
+      "      return self.obtain(req, installer)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pkg_resources\\__init__.py\", line 1063, in obtain\n",
+      "      return installer(requirement)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\dist.py\", line 877, in fetch_build_egg\n",
+      "      return fetch_build_egg(self, req)\n",
+      "    File \"C:\\Users\\omer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\setuptools\\installer.py\", line 77, in fetch_build_egg\n",
+      "      raise DistutilsError(str(e)) from e\n",
+      "  distutils.errors.DistutilsError: Command '['C:\\\\Users\\\\omer\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python39\\\\python.exe', '-m', 'pip', '--disable-pip-version-check', 'wheel', '--no-deps', '-w', 'C:\\\\Users\\\\omer\\\\AppData\\\\Local\\\\Temp\\\\tmp4anec9tg', '--quiet', 'distribute']' returned non-zero exit status 1.\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "Encountered error while generating package metadata.\n",
+      "\n",
+      "See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install dotenv"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-04T15:24:06.476313400Z",
+     "start_time": "2024-04-04T15:24:00.409539100Z"
+    }
+   },
+   "id": "aa7050a3f1dc6892"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-27T17:46:59.152563700Z",
-     "start_time": "2024-02-27T17:46:56.226768900Z"
+     "end_time": "2024-04-04T15:26:09.527572400Z",
+     "start_time": "2024-04-04T15:26:09.495145700Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dotenv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[7], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mdotenv\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m load_dotenv\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mllama_index\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01membeddings\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mopenai\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m OpenAIEmbedding\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'dotenv'"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -251,7 +371,7 @@
    "execution_count": 22,
    "outputs": [],
    "source": [
-    "new_df=modelResponse(llm,query_engine,df)"
+    "new_df=modelResponse(llm,query_engine,df.head(1))"
    ],
    "metadata": {
     "collapsed": false,
